--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,6 +1,6 @@
 .row{
 
-
+  margin-top: 5rem;
 
   @mixin clearfix;
 
@@ -14,15 +14,28 @@
   }
 
   @mixin atMedium{
+
     &__medium-4{
       float: left;
       width: 33.3%;
+    }
+
+    &__medium-4--larger{
+      width: 37%;
+
     }
 
     &__medium-8{
       float: right;
       width: 66.6%;
     }
+
+    &__medium-8--smaller{
+      float: right;
+      width: 63%;
+    }
+
+
 
   }
 
